[package]
name = "newbie_car"
version = "0.1.0"
authors = ["Multi-Illusion <multiillusion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
nb = "0.1.2"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
libm = "0.2.1"

[dependencies.stm32f1xx-hal]
version = "0.8.0"
features = ["rt", "stm32f103", "medium"]